--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,11 @@
   <h1>SUCH WOW WEBPAGE</h1>
 </head>
 <body>
-  <section id="assignment">
+  <section id="currentAssignments">
+  </section>
+  <section id="futureAssignments">
+  </section>
+  <section id="previousAssignments">
   </section>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
