--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CADET LMS</title>
+  <link rel="stylesheet" href="css/application.css">
 </head>
 
 <body>
