--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CADET LMS</title>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <link rel="stylesheet" href="css/application.css">
 </head>
 
@@ -12,7 +13,7 @@
   <container class="assignments"><h2>Due Right Fucking Now<h2>Show/Hide
     <h3>Javscript to Death</h3><button>View</button>
     <h3>Demonstrate your "webmaster skills</h3><button>View</button>
-    <h3>Server it</h3><button>View</button>
+    <h3><a href="https://www.codefellows.org/">Server it</a></h3><button>View</button>
   </container>
 
   <container class="assignments">
@@ -20,6 +21,11 @@
     <h3>Do CSS Stuff</h3><button>View</button>
     <h3>Make it Pretty</h3><button>View</button>
     <h3>Cry</h3><button>View</button>
+    <ul>
+      <li>Sample list item 1</li>
+      <li>Sample list item 2</li>
+      <li>Sample list item 3</li>
+    </ul>
   </container>
 
   <container class="assignments">
