add font script tag to index, remove uneccesary import from application.scss

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>DUMMY WEBPAGE</title>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <link rel="stylesheet" href="css/application.css">
 </head>
 <body>
