--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,11 @@
   <h1>SUCH WOW WEBPAGE</h1>
 </head>
 <body>
-  <section id="currentAssignments">
-  </section>
-  <section id="futureAssignments">
-  </section>
-  <section id="previousAssignments">
-  </section>
+  <div id ="root">
+    <!-- <section id="currentAssignments"></section>
+    <section id="futureAssignments"></section>
+    <section id="previousAssignments"></section> -->
+  </div>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
