re-sass to Dexter's updated specs

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Cadet</title>
+  <link href='https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans' rel='stylesheet' type='text/css'>
+  <script src="https://use.typekit.net/epm4awk.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <link rel="stylesheet" href="css/application.css">
 </head>
