--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/application.css">
 </head>
 <body>
-  <div id ="root" class="main"></div>
+  <div id ="root"></div>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
